add personal data page

--- a/readme.html
+++ b/readme.html
@@ -20,5 +20,13 @@
             react-native-vector-icons
         </span>
     </p>
+
+    <p>
+        <span>2017-8-21</span>
+        <br/>
+        <span>
+            react-native-elements
+        </span>
+    </p>
 </body>
 </html>
