add tabnavigator to details page

--- a/readme.html
+++ b/readme.html
@@ -28,5 +28,13 @@
             react-native-elements
         </span>
     </p>
+
+    <p>
+        <span>2017-8-23</span>
+        <br/>
+        <span>
+            redux
+        </span>
+    </p>
 </body>
 </html>
