add react-native-image-picker component

--- a/readme.html
+++ b/readme.html
@@ -44,5 +44,13 @@
             react-native-action-button
         </span>
     </p>
+
+    <p>
+        <span>2017-8-25</span>
+        <br/>
+        <span>
+            react-native-image-picker
+        </span>
+    </p>
 </body>
 </html>
