add expo library

--- a/readme.html
+++ b/readme.html
@@ -52,5 +52,13 @@
             react-native-image-picker
         </span>
     </p>
+
+    <p>
+        <span>2017-8-28</span>
+        <br/>
+        <span>
+            expo
+        </span>
+    </p>
 </body>
 </html>
