add react-native-camera and react-native-qrcode-scanner components

--- a/readme.html
+++ b/readme.html
@@ -52,5 +52,20 @@
             react-native-image-picker
         </span>
     </p>
+
+    <p>
+        <span>2017-8-29</span>
+        <br/>
+        <span>
+            react-native-camera
+        </span>
+    </p>
+    <p>
+        <span>2017-8-29</span>
+        <br/>
+        <span>
+            react-native-qrcode-scanner
+        </span>
+    </p>
 </body>
 </html>
