add react-native-wechat and react-native-yunpeng-alipay libraries

--- a/readme.html
+++ b/readme.html
@@ -67,5 +67,20 @@
             react-native-qrcode-scanner
         </span>
     </p>
+
+    <p>
+        <span>2017-8-29</span>
+        <br/>
+        <span>
+            react-native-wechat
+        </span>
+    </p>
+    <p>
+        <span>2017-8-29</span>
+        <br/>
+        <span>
+            react-native-yunpeng-alipay
+        </span>
+    </p>
 </body>
 </html>
