app context & storage

--- a/readme.html
+++ b/readme.html
@@ -98,5 +98,13 @@
             redux/react-redux/redux-devtools
         </span>
     </p>
+
+    <p>
+        <span>2017-9-18</span>
+        <br/>
+        <span>
+            react-native-storage
+        </span>
+    </p>
 </body>
 </html>
