location & traffic icon at home page

--- a/readme.html
+++ b/readme.html
@@ -43,6 +43,9 @@
         <span>
             react-native-action-button
         </span>
+        <span>
+            status: obsolete
+        </span>
     </p>
 
     <p>
@@ -65,6 +68,9 @@
         <br/>
         <span>
             react-native-qrcode-scanner
+        </span>
+        <span>
+            status: obsolete
         </span>
     </p>
 
