import jpush module

--- a/readme.html
+++ b/readme.html
@@ -112,5 +112,13 @@
             react-native-storage
         </span>
     </p>
+
+    <p>
+        <span>2017-10-23</span>
+        <br/>
+        <span>
+            jcore-react-native/jpush-react-native
+        </span>
+    </p>
 </body>
 </html>
