react-native-wechat

--- a/readme.html
+++ b/readme.html
@@ -120,5 +120,13 @@
             jcore-react-native/jpush-react-native
         </span>
     </p>
+
+    <p>
+        <span>2017-12-19</span>
+        <br/>
+        <span>
+            react-native-fs
+        </span>
+    </p>
 </body>
 </html>
