more and more...

--- a/readme.html
+++ b/readme.html
@@ -136,5 +136,13 @@
             redux-thunk/redux-logger
         </span>
     </p>
+
+    <p>
+        <span>2018-1-16</span>
+        <br/>
+        <span>
+            react-native-progress
+        </span>
+    </p>
 </body>
 </html>
