--- a/readme.html
+++ b/readme.html
@@ -144,5 +144,13 @@
             react-native-progress
         </span>
     </p>
+
+    <p>
+        <span>2018-1-16</span>
+        <br/>
+        <span>
+            redux-persist@v4
+        </span>
+    </p>
 </body>
 </html>
