more and more...

--- a/readme.html
+++ b/readme.html
@@ -152,5 +152,13 @@
             redux-persist@v4
         </span>
     </p>
+
+    <p>
+        <span>2018-1-25</span>
+        <br/>
+        <span>
+            react-native-picker
+        </span>
+    </p>
 </body>
 </html>
