more and more...

--- a/readme.html
+++ b/readme.html
@@ -141,7 +141,7 @@
         <span>2018-1-16</span>
         <br/>
         <span>
-            react-native-progress
+            react-native-circular-progress
         </span>
     </p>
 
