--- a/readme.html
+++ b/readme.html
@@ -160,5 +160,13 @@
             react-native-picker
         </span>
     </p>
+
+    <p>
+        <span>2018-2-27</span>
+        <br/>
+        <span>
+            react-native-looped-carousel
+        </span>
+    </p>
 </body>
 </html>
