change dominant color

--- a/readme.html
+++ b/readme.html
@@ -168,5 +168,13 @@
             react-native-looped-carousel
         </span>
     </p>
+
+    <p>
+        <span>2018-3-24</span>
+        <br/>
+        <span>
+            react-native-linear-gradient
+        </span>
+    </p>
 </body>
 </html>
